Solve the tooltip z-index bug

--- a/app/assets/stylesheets/components/_tooltip.scss
+++ b/app/assets/stylesheets/components/_tooltip.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   opacity: 1;
   font-size: 20px;
+  z-index: 95;
 }
 
 .tooltip .tooltiptext {
